--- a/task 3.html
+++ b/task 3.html
@@ -75,7 +75,7 @@
     <br>
     <details>
         <summary>
-            <h2>Thanks for visiting &#128513; my page!!</h2>
+            <h2>Thanks for visiting &#128513;</h2>
         </summary>
     <p>
         <ul type="none">
